@@ -10,6 +10,9 @@ Version 0.9.22
        * #259 implement LoadAchievements
        * #380 Callback on CreateWithInvitationScreen
        * #445 Variant error in turn based match
+       * #480 Get score rank after submitting
+       * #503 LoadScores not implemented
+       * #563 Custom UI for invitation UI.
        * #614 OnRoomConnected() getting called twice after implementing ShowWaitingRoomUI
        * #617 Get all turn-based matches
 Version 0.9.21
